prevent trial banner in the footer overlapping sidebar

--- a/src/web/assets/cp/src/css/_cp.scss
+++ b/src/web/assets/cp/src/css/_cp.scss
@@ -1022,6 +1022,7 @@ li.breadcrumb-toggle-wrapper {
   @include padding-right(24px);
   @include padding-left(14px);
   width: $detailsWidth + 38;
+  z-index: 1;
 
   &.fixed {
     position: fixed;
@@ -1040,6 +1041,10 @@ li.breadcrumb-toggle-wrapper {
 
     &:not(.read-only):not(.warning) {
       background-color: $grey050;
+    }
+
+    &:last-child {
+      margin-bottom: 11.5em;
     }
 
     &.read-only {
@@ -1270,6 +1275,10 @@ li.breadcrumb-toggle-wrapper {
   #details {
     padding: 0 !important;
     margin-top: 14px;
+
+    .meta:last-child {
+      margin-bottom: auto;
+    }
   }
 }
 
